inicializando os comandos

--- a/src/Cashback/Cashback.API/Cashback.API.csproj
+++ b/src/Cashback/Cashback.API/Cashback.API.csproj
@@ -15,4 +15,8 @@
     <ProjectReference Include="..\Cashback.Domain\Cashback.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="v1\Controllers\" />
+  </ItemGroup>
+
 </Project>
