--- a/src/Cashback/Cashback.Domain/Cashback.Domain.csproj
+++ b/src/Cashback/Cashback.Domain/Cashback.Domain.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="Microsoft.CSharp" Version="4.6.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="2.2.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
 </Project>
