criação das controllers de albums e generos e criação das consultas

--- a/src/Cashback/Cashback.API/Cashback.API.csproj
+++ b/src/Cashback/Cashback.API/Cashback.API.csproj
@@ -9,15 +9,12 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="3.1.6" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="2.2.6" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.4" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="4.0.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Cashback.Domain\Cashback.Domain.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="v1\Controllers\" />
   </ItemGroup>
 
 </Project>
