--- a/src/Cashback/Cashback.Domain/Cashback.Domain.csproj
+++ b/src/Cashback/Cashback.Domain/Cashback.Domain.csproj
@@ -6,9 +6,11 @@
 
   <ItemGroup>
     <Folder Include="Events\Listeners\" />
+    <Folder Include="Queries\Sales\" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.0.30" />
     <PackageReference Include="Microsoft.CSharp" Version="4.6.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="2.2.0" />
